# kent-student-assistant-chatbot

./: .gitignore  LICENSE  README.md  prototype_spec.md  pyproject.toml
app/: config.py  ingest.py  main.py  prompts.py  retrieval.py
data/: kent-university.md  kent_info.md
